--- a/Assignments/assignment_2/Jinyang_Xu_Assignment2.html
+++ b/Assignments/assignment_2/Jinyang_Xu_Assignment2.html
@@ -3926,11 +3926,11 @@ vertical-align: -.125em;
     </a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-assignmentss">    
         <li>
-    <a class="dropdown-item" href="../../Assignments/assignment_1/assignment1_template.qmd">
+    <a class="dropdown-item" href="../../Assignments/assignment_1/Jinyang_Xu_Assignment1.html">
  <span class="dropdown-text">Assignment 1: Census Data Exploration</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="../../Assignments/assignment_2/assignment2_template.qmd">
+    <a class="dropdown-item" href="../../Assignments/assignment_2/Jinyang_Xu_Assignment2.html">
  <span class="dropdown-text">Assignment 2: Spatial Analysis and Visualization</span></a>
   </li>  
     </ul>
