--- a/labs/lab1/week-03/scrips/week3_lab_exercise.html
+++ b/labs/lab1/week-03/scrips/week3_lab_exercise.html
@@ -172,11 +172,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     </a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-assignmentss">    
         <li>
-    <a class="dropdown-item" href="../../../../Assignments/assignment_1/assignment1_template.qmd">
+    <a class="dropdown-item" href="../../../../Assignments/assignment_1/Jinyang_Xu_Assignment1.html">
  <span class="dropdown-text">Assignment 1: Census Data Exploration</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="../../../../Assignments/assignment_2/assignment2_template.qmd">
+    <a class="dropdown-item" href="../../../../Assignments/assignment_2/Jinyang_Xu_Assignment2.html">
  <span class="dropdown-text">Assignment 2: Spatial Analysis and Visualization</span></a>
   </li>  
     </ul>
